--- a/assets/languages/th.json
+++ b/assets/languages/th.json
@@ -9,5 +9,15 @@
             "help": "ช่วยเหลือ",
             "feedback": "ข้อเสนอแนะ"
         }
+    },
+    "dialog": {
+        "logout": {
+            "title": "ยืนยันการออกจากระบบ",
+            "content": "คุณแน่ใจหรือไม่ว่าต้องการออกจากแอปพลิเคชัน?"
+        },
+        "button": {
+            "yes": "ใช่",
+            "no": "ไม่"
+        }
     }
 }
