--- a/assets/languages/ru.json
+++ b/assets/languages/ru.json
@@ -10,6 +10,30 @@
             "feedback": "Обратная связь"
         }
     },
+    "debug": {
+        "screens": {
+            "landing": {
+                "content": "Содержимое стартового экрана",
+                "goToHomeButton": "Перейти на главный экран",
+                "title": "Стартовый экран"
+            },
+            "home": {
+                "content": "Содержимое главного экрана"
+            },
+            "two": {
+                "content": "Содержимое второго экрана"
+            },
+            "three": {
+                "content": "Содержимое третьего экрана"
+            }
+        },
+        "four": {
+            "content": "Содержимое четвертого экрана"
+        },
+        "five": {
+            "content": "Содержимое пятого экрана"
+        }
+    },
     "dialog": {
         "logout": {
             "title": "Подтвердите выход",
