--- a/assets/languages/th.json
+++ b/assets/languages/th.json
@@ -10,6 +10,30 @@
             "feedback": "ข้อเสนอแนะ"
         }
     },
+    "debug": {
+        "screens": {
+            "landing": {
+                "content": "เนื้อหาของหน้าจอเริ่มต้น",
+                "goToHomeButton": "ไปที่หน้าจอหลัก",
+                "title": "หน้าจอเริ่มต้น"
+            },
+            "home": {
+                "content": "เนื้อหาของหน้าจอหลัก"
+            },
+            "two": {
+                "content": "เนื้อหาของหน้าจอที่สอง"
+            },
+            "three": {
+                "content": "เนื้อหาของหน้าจอที่สาม"
+            }
+        },
+        "four": {
+            "content": "เนื้อหาของหน้าจอที่สี่"
+        },
+        "five": {
+            "content": "เนื้อหาของหน้าจอที่ห้า"
+        }
+    },
     "dialog": {
         "logout": {
             "title": "ยืนยันการออกจากระบบ",
