--- a/assets/languages/ru.json
+++ b/assets/languages/ru.json
@@ -1,6 +1,26 @@
 {
+    "footer": {
+        "bar": {
+            "label": {
+                "home": "Главная",
+                "two": "Два",
+                "three": "Три",
+                "four": "Четыре",
+                "five": "Пять"
+            }
+        }
+    },
     "header": {
-        "title": "Фруктовая лавка",
+        "title": "Devlite Flutter",
+        "bar": {
+            "label": {
+                "home": "Главная",
+                "two": "Два",
+                "three": "Три",
+                "four": "Четыре",
+                "five": "Пять"
+            }
+        },
         "drawer": {
             "settings": "Настройки",
             "billing": "Оплата",
@@ -11,27 +31,28 @@
         }
     },
     "debug": {
+        "comment": "// TODO : Удалить этот раздел в продакшене.",
         "screens": {
             "landing": {
-                "content": "Содержимое стартового экрана",
+                "content": "Содержимое начального экрана",
                 "goToHomeButton": "Перейти на главный экран",
-                "title": "Стартовый экран"
+                "title": "Начальный экран"
             },
             "home": {
                 "content": "Содержимое главного экрана"
             },
             "two": {
-                "content": "Содержимое второго экрана"
+                "content": "Содержимое экрана два"
             },
             "three": {
-                "content": "Содержимое третьего экрана"
+                "content": "Содержимое экрана три"
+            },
+            "four": {
+                "content": "Содержимое экрана четыре"
+            },
+            "five": {
+                "content": "Содержимое экрана пять"
             }
-        },
-        "four": {
-            "content": "Содержимое четвертого экрана"
-        },
-        "five": {
-            "content": "Содержимое пятого экрана"
         }
     },
     "dialog": {
