--- a/assets/languages/th.json
+++ b/assets/languages/th.json
@@ -1,6 +1,26 @@
 {
+    "footer": {
+        "bar": {
+            "label": {
+                "home": "หน้าหลัก",
+                "two": "สอง",
+                "three": "สาม",
+                "four": "สี่",
+                "five": "ห้า"
+            }
+        }
+    },
     "header": {
-        "title": "ร้านขายผลไม้",
+        "title": "Devlite Flutter",
+        "bar": {
+            "label": {
+                "home": "หน้าหลัก",
+                "two": "สอง",
+                "three": "สาม",
+                "four": "สี่",
+                "five": "ห้า"
+            }
+        },
         "drawer": {
             "settings": "การตั้งค่า",
             "billing": "การเรียกเก็บเงิน",
@@ -11,27 +31,28 @@
         }
     },
     "debug": {
+        "comment": "// TODO : ลบส่วนนี้ในโปรดักชัน.",
         "screens": {
             "landing": {
-                "content": "เนื้อหาของหน้าจอเริ่มต้น",
-                "goToHomeButton": "ไปที่หน้าจอหลัก",
-                "title": "หน้าจอเริ่มต้น"
+                "content": "เนื้อหาหน้าแลนดิ้ง",
+                "goToHomeButton": "ไปยังหน้าหลัก",
+                "title": "หน้าแลนดิ้ง"
             },
             "home": {
-                "content": "เนื้อหาของหน้าจอหลัก"
+                "content": "เนื้อหาหน้าหลัก"
             },
             "two": {
-                "content": "เนื้อหาของหน้าจอที่สอง"
+                "content": "เนื้อหาหน้าสอง"
             },
             "three": {
-                "content": "เนื้อหาของหน้าจอที่สาม"
+                "content": "เนื้อหาหน้าสาม"
+            },
+            "four": {
+                "content": "เนื้อหาหน้าสี่"
+            },
+            "five": {
+                "content": "เนื้อหาหน้าห้า"
             }
-        },
-        "four": {
-            "content": "เนื้อหาของหน้าจอที่สี่"
-        },
-        "five": {
-            "content": "เนื้อหาของหน้าจอที่ห้า"
         }
     },
     "dialog": {
